# macos_resource_monitor

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: config.toml
launchd/: com.example.macresourcemonitor.plist
src/: alert.rs  config.rs  lib.rs  logging.rs  metrics.rs  notify.rs
