[package]
name = "macos_resource_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sysinfo = "0.30"
directories = "5"
mac-notification-sys = "0.6"
parking_lot = "0.12.5"
axum = "0.8.7"
http = "1.4.0"
tokio = "1.48.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
dirs = "5"
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "1.0"

